# SimDNA

./: CMakeLists.txt  LICENSE  main.cpp
include/: Configure.h  DataStructure.h  Origami.h  Utility.h
lib/: Vector3D.h
src/: DataStructure.cpp  Origami.cpp  Origami_functions.cpp  Test.cpp  ToOpenMM.cpp  Utility.cpp
